<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voce_manda"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lancamentos_clique"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agenda_planeje_o_futuro"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atencao"
            android:textColor="#D32F2F"
            android:textStyle="italic"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/importante"
            android:textColor="#3F51B5"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkNaoMostrarNovamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entendi_tudo" />

        <Button
            android:id="@+id/btnEntendido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vamos_comecar"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>