<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/agendaFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/agenda" />

    <item
        android:id="@+id/nav_graficos"
        android:icon="@drawable/ic_chart"
        android:title="@string/graficos" />
    <item
        android:id="@+id/action_personalizar"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/personalizar" />

    <!-- Futuramente você pode adicionar mais aqui, ex: Categorias -->
</menu>
